// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentityWallet addAuthMethod should throw before authenticate 1`] = `[Error: This method can only be called after authenticate has been called]`;

exports[`IdentityWallet asymmetrically encrypt/decrypt works correctly 1`] = `[Error: IdentityWallet: Could not decrypt message]`;

exports[`IdentityWallet authenticate externalAuth migration returns keys 1`] = `
Object {
  "main": Object {
    "asymEncryptionKey": "12X0Ua5LDr1rDwKb34mYzNIZUGoqYZBou8h/TLo+FDk=",
    "managementKey": "0x8fef7ac873dec3cc8a112ea20cd25d4f01cb3e6a",
    "signingKey": "024f849b104b7c10ee94cfc29ddb46163b1e988f6f1fbb95b14dd1777205963a9a",
  },
  "spaces": Object {},
}
`;

exports[`IdentityWallet authenticate externalAuth migration returns keys 2`] = `
Object {
  "main": Object {
    "asymEncryptionKey": "12X0Ua5LDr1rDwKb34mYzNIZUGoqYZBou8h/TLo+FDk=",
    "managementKey": "0x8fef7ac873dec3cc8a112ea20cd25d4f01cb3e6a",
    "signingKey": "024f849b104b7c10ee94cfc29ddb46163b1e988f6f1fbb95b14dd1777205963a9a",
  },
  "spaces": Object {
    "space1": Object {
      "asymEncryptionKey": "07o6cX+mSS3Cm74grNc5jHnn6Yp8Cuv4BJUz7nW+6Xs=",
      "managementKey": null,
      "signingKey": "0494425f50ab3699013b6cdec04d2f266d2af09cb4e1968c2c7734706e76d48d25661b78e54348e3b4783b87c5fbe9b3967bb0728ea00ce2ca38e1f8d75a3843eb",
    },
  },
}
`;

exports[`IdentityWallet authenticate externalAuth migration returns keys 3`] = `
Object {
  "main": Object {
    "asymEncryptionKey": "12X0Ua5LDr1rDwKb34mYzNIZUGoqYZBou8h/TLo+FDk=",
    "managementKey": "0x8fef7ac873dec3cc8a112ea20cd25d4f01cb3e6a",
    "signingKey": "024f849b104b7c10ee94cfc29ddb46163b1e988f6f1fbb95b14dd1777205963a9a",
  },
  "spaces": Object {
    "space1": Object {
      "asymEncryptionKey": "07o6cX+mSS3Cm74grNc5jHnn6Yp8Cuv4BJUz7nW+6Xs=",
      "managementKey": null,
      "signingKey": "0494425f50ab3699013b6cdec04d2f266d2af09cb4e1968c2c7734706e76d48d25661b78e54348e3b4783b87c5fbe9b3967bb0728ea00ce2ca38e1f8d75a3843eb",
    },
    "space2": Object {
      "asymEncryptionKey": "iW8/11qdRkUfIaKcXwOdzoW6rjhI9OKzsCyb5gg6nA0=",
      "managementKey": null,
      "signingKey": "049eccb01e5597f48ccf1bcefba32ddba631c7cf1bd38da2d8b649d7cba9de1118f8b06fbb4127bb3fa2c615f1d5d309f64e64ebfcce5752231963a3fa9246cb1c",
    },
  },
}
`;

exports[`IdentityWallet authenticate should throw if no valid authSecrets 1`] = `[Error: No valid auth-secret for this identity]`;

exports[`IdentityWallet authenticate works correctly w/ seed only wallet 1`] = `
Object {
  "main": Object {
    "asymEncryptionKey": "jRKRy3oPhXpUBrFJefO2CJnWw/IoalOPuepAwvTqrEk=",
    "managementKey": "0xa7b76379659b6c19E4DFf46e0DfEa48AFEBA8fe3",
    "signingKey": "027ab5238257532f486cbeeac59a5721bbfec2f13c3d26516ca9d4c5f0ec1aa229",
  },
  "spaces": Object {},
}
`;

exports[`IdentityWallet authenticate works correctly w/ seed only wallet 2`] = `
Object {
  "main": Object {
    "asymEncryptionKey": "jRKRy3oPhXpUBrFJefO2CJnWw/IoalOPuepAwvTqrEk=",
    "managementKey": "0xa7b76379659b6c19E4DFf46e0DfEa48AFEBA8fe3",
    "signingKey": "027ab5238257532f486cbeeac59a5721bbfec2f13c3d26516ca9d4c5f0ec1aa229",
  },
  "spaces": Object {
    "space1": Object {
      "asymEncryptionKey": "aA5XCwjYEv6RhS11GzYb902nsdZns66orubcWGxnm2c=",
      "managementKey": null,
      "signingKey": "0483441873077702f08a9e84d0ff869b5d08cb37361d77c7e5c57777e953670a0debc728f18dc49203596a0b2392d8675bc28d8da62262350123c2c8ca4e709568",
    },
    "space2": Object {
      "asymEncryptionKey": "G/pdGl6OtWv1Vz5LplLZIJxOhH2AmXnF+2BYF5e1TUc=",
      "managementKey": null,
      "signingKey": "04836712d05ad740972438b48b8c88571fa387c856f1c73a9abed17586de49c5dd9c681bc296087f2f5831813b93b15311c2fe483c284ef02d6115fe4a20b2256e",
    },
  },
}
`;

exports[`IdentityWallet authenticate works correctly w/ seed only wallet 3`] = `
Object {
  "main": Object {
    "asymEncryptionKey": "jRKRy3oPhXpUBrFJefO2CJnWw/IoalOPuepAwvTqrEk=",
    "managementKey": "0xa7b76379659b6c19E4DFf46e0DfEa48AFEBA8fe3",
    "signingKey": "027ab5238257532f486cbeeac59a5721bbfec2f13c3d26516ca9d4c5f0ec1aa229",
  },
  "spaces": Object {
    "space3": Object {
      "asymEncryptionKey": "F4OJwO3rpESb+/D8Q8IKGzaNwQJ+TwHt+QOzEtSvkSk=",
      "managementKey": null,
      "signingKey": "046006731db949141b42b64bf1121be029bb5abe9e8267413db1ee9d6c6010507f51607253f839ac3a2ce2c064fca8049b3c4204f7e502ba6b56a961b5a309de4f",
    },
    "space4": Object {
      "asymEncryptionKey": "3QRW9cArRuXgIb0zI/r3/oaoP52TkIWc12Vr52XwAAE=",
      "managementKey": null,
      "signingKey": "047ed187e7ce1f88e6fdd058882cf6f48301efc4992697c623e7fb2837d8d8d8c0cadc19cf5c628c9034943a0ff48b591a1dc0ae83f40878b8b41da4d9bbd98bc6",
    },
  },
}
`;

exports[`IdentityWallet authenticate works correctly w/ seed only wallet 4`] = `
Object {
  "main": Object {
    "asymEncryptionKey": "jRKRy3oPhXpUBrFJefO2CJnWw/IoalOPuepAwvTqrEk=",
    "managementKey": "0xa7b76379659b6c19E4DFf46e0DfEa48AFEBA8fe3",
    "signingKey": "027ab5238257532f486cbeeac59a5721bbfec2f13c3d26516ca9d4c5f0ec1aa229",
  },
  "spaces": Object {
    "space2": Object {
      "asymEncryptionKey": "G/pdGl6OtWv1Vz5LplLZIJxOhH2AmXnF+2BYF5e1TUc=",
      "managementKey": null,
      "signingKey": "04836712d05ad740972438b48b8c88571fa387c856f1c73a9abed17586de49c5dd9c681bc296087f2f5831813b93b15311c2fe483c284ef02d6115fe4a20b2256e",
    },
    "space3": Object {
      "asymEncryptionKey": "F4OJwO3rpESb+/D8Q8IKGzaNwQJ+TwHt+QOzEtSvkSk=",
      "managementKey": null,
      "signingKey": "046006731db949141b42b64bf1121be029bb5abe9e8267413db1ee9d6c6010507f51607253f839ac3a2ce2c064fca8049b3c4204f7e502ba6b56a961b5a309de4f",
    },
  },
}
`;

exports[`IdentityWallet encrypt/decrypt works correctly 1`] = `[Error: IdentityWallet: Could not decrypt message]`;

exports[`IdentityWallet getLink correctly 1`] = `"0xa7b76379659b6c19E4DFf46e0DfEa48AFEBA8fe3"`;

exports[`IdentityWallet getLink correctly 2`] = `"0xE72E6c37c15986C86Aa94007451750176E9a999F"`;
